Bug 127211 - StartCenter background is white with empty user profile
Summary: StartCenter background is white with empty user profile
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.4.0
Keywords: bibisectRequest, regression
: 127228 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-08-29 07:44 UTC by Roman Kuznetsov
Modified: 2019-09-19 18:56 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Dotted -> Dashed rectangle on buttons (30.17 KB, image/png)
2019-08-29 07:45 UTC, Roman Kuznetsov
Details
flat button focus (274.70 KB, video/x-matroska)
2019-09-08 19:12 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2019-08-29 07:44:01 UTC
Description:
Dotted rectangle became dashed and line became more fat

Steps to Reproduce:
1. Open Start Center
2. Look at Open File button


Actual Results:
see screenshot in attach

Expected Results:
see screenshot in attach


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.4.0.0.alpha0+ (x86)
Build ID: a1a401acaafee0b1f154d368a247d74d61c62191
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2019-08-28_15:45:26
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded
Comment 1 Roman Kuznetsov 2019-08-29 07:45:59 UTC
Created attachment 153729 [details]
Dotted -> Dashed rectangle on buttons
Comment 2 V Stuart Foote 2019-08-29 12:50:39 UTC
Confirmed Windows 10 Home 64-bit en-US with
Version: 6.4.0.0.alpha0+ (x64)
Build ID: 0fb2927a8fe06e6c3255544b8e4c4c9c0f5a67d3
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-08-27_22:13:47
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

Not present last available nightly TB62, and does not affect OpenGL rendering just GDI default (HA or CPU only).

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 3e64065612acec2eb29aa21e2b515953422256d7
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-08-15_22:57:26
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded


The backing window has also shifted color to white.
I'd have a look at recent work on bug 71087
https://gerrit.libreoffice.org/#/c/77969/

@Miklos?
Comment 3 Miklos Vajna 2019-08-29 12:54:19 UTC
Yes, that will be it. This is the closest I could came up with to still have the rectangle at all and also have flicker-free output.

If there are suggestions (patches) on how to get the output even closer without re-introducing flicker, I'm interested. :-) And as such, no need to bisect.
Comment 4 V Stuart Foote 2019-08-29 12:56:14 UTC
> 
> The backing window has also shifted color to white.

Just when the thumbnail view is empty of thumbnails and the welcome graphic is showing. Adding thumbnail of just one document returns correct grey to the frame.
Comment 5 Miklos Vajna 2019-08-29 12:59:18 UTC
Oh, the white background is more annoying, sorry, I didn't notice that part.
Comment 6 Miklos Vajna 2019-08-29 13:09:37 UTC
That one is a problem since a5cafe5d7e87c0f5ecdcffbbe58c66abcb97ac8e / bug 91843.
Comment 7 Commit Notification 2019-08-29 16:46:08 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/35132e5cd648fd54ffb186039324f5fb954dd08f%5E%21

tdf#127211 start center: fix background of the main area with no recent docs

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 V Stuart Foote 2019-08-29 17:14:55 UTC
Cool, Thanks Miklos!

@Kendy, Jim any input for Miklos on visual handling of the button focus for the StartCenter's menuBar buttons to clean up issue of OP?
Comment 9 V Stuart Foote 2019-08-30 01:00:28 UTC
*** Bug 127228 has been marked as a duplicate of this bug. ***
Comment 10 Miklos Vajna 2019-08-30 09:58:26 UTC
The above helped with Linux gtk3, but not with e.g. Linux gen. So not closing yet.
Comment 11 Thorsten Wagner 2019-08-30 13:04:55 UTC
Problem still exists on macOS too.
Comment 12 Commit Notification 2019-08-30 15:51:27 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/a40fbd031de042b0181dc5570164ae8ce0abb0f1%5E%21

tdf#127211 Revert "tdf#71087 sfx2: avoid flicker in the start center"

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Miklos Vajna 2019-08-30 15:52:57 UTC
See <https://bugs.documentfoundation.org/show_bug.cgi?id=71087#c38> I decided to just revert that commit till it's clear how to fix that other bug properly. Which means this bug is now resolved.
Comment 14 Jim Raykowski 2019-09-08 19:12:11 UTC
Created attachment 154025 [details]
flat button focus

Would using highlighting like when a button is rolled over by the mouse be an acceptable substitute in place of a focus rectangle?
Comment 15 V Stuart Foote 2019-09-08 20:39:02 UTC
(In reply to Jim Raykowski from comment #14)
> Created attachment 154025 [details]
> flat button focus
> 
> Would using highlighting like when a button is rolled over by the mouse be
> an acceptable substitute in place of a focus rectangle?

If it is _only_ on mouse over, kind of leaves keyboard navigation (and a11y users) hanging, right? So, unless focus movmenents can be made with keyboard (<TAB>, <F6> and cursors (R,L, U,D) going to be an issue.
Comment 16 Jim Raykowski 2019-09-09 07:53:50 UTC
Here is a hack that provides the behavior of highlighting the button with focus using keyboard navigation when using gtk3 as shown in attachment video demonstration in comment 14. 

https://gerrit.libreoffice.org/#/c/78771/
Comment 17 Jim Raykowski 2019-09-19 18:56:37 UTC
Keyboard focus rectangle has magically appeared in build

Version: 6.4.0.0.alpha0+
Build ID: bda1d88f2bfa21202725ab9c567b3cccba3c1f0b
CPU threads: 4; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

Please ignore my suggested hack, thank you.