vcl/source/window/paint.cxx
@@ -298,8 +298,8 @@ void PaintHelper::DoPaint(const vcl::Region* pRegion)
             // direct painting
             Wallpaper aBackground = m_pWindow->GetBackground();
             m_pWindow->ApplySettings(*m_pWindow);
-            // Restore lost bitmap or solid color background.
-            if (aBackground.IsBitmap() || aBackground.GetColor() != COL_TRANSPARENT)
+            // Restore lost bitmap background.
+            if (aBackground.IsBitmap())
                 m_pWindow->SetBackground(aBackground);
             m_pWindow->PushPaintHelper(this, *m_pWindow);
             m_pWindow->Paint(*m_pWindow, m_aPaintRect);
